Changed LICENSE.txt to LICENSE

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,16 @@ nosetests.xml
 .pydevproject
 
 # Temp files
-
 *~
 
 # Pipy codes
-
 .pypirc
+
+# venv
+venv
+
+# Visual Studio Code files
+.vscode
+
+# Test folders
+/tests
